# tap-pypistats

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: build.yml  ci.yaml
src/tap_pypistats/: tap.py
tap_pypistats/: __init__.py  tap.py
tests/: test_config.py  test_sync.py
