[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-pypistats"
readme = "README.md"
keywords = [
  "meltano",
  "pypistats",
  "singer-io",
  "singer-tap",
]
license.file = "LICENSE"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "version",
]
dependencies = [
  "requests==2.32.3",
  "requests-cache==1.2.1",
]
optional-dependencies.tests = [
  "pytest==8.3.2",
  "pytest-httpserver==1.0.12",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-pypistats#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-pypistats"
scripts."tap-pypistats" = "tap_pypistats.tap:main"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100
preview = true

lint.select = [
  "BLE",
  "C90",
  "E",
  "F",
  "FA",
  "FURB",
  "G",
  "I",
  "LOG",
  "PERF",
  "PIE",
  "RUF",
  "S",
  "UP",
  "W",
]
lint.per-file-ignores."tests/*" = [
  "S101",
]

[tool.pyproject-fmt]
max_supported_python = "3.13"
