[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-pinned-extra",
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-pypistats"
description = "Singer tap for pypistats.org"
readme = "README.md"
keywords = [
  "meltano",
  "pypistats",
  "singer-io",
  "singer-tap",
]
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "optional-dependencies",
  "version",
]
dependencies = [
  "requests==2.32.3",
  "requests-cache==1.2.1",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-pypistats#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-pypistats"
scripts."tap-pypistats" = "tap_pypistats.tap:main"

[dependency-groups]
dev = [
  { include-group = "tests" },
]
tests = [
  "pytest==8.3.3",
  "pytest-httpserver==1.1",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.pinned_extra]
name = "pinned"

[tool.ruff]
line-length = 100
preview = true

lint.select = [
  "BLE",
  "C90",
  "E",
  "F",
  "FA",
  "FURB",
  "G",
  "I",
  "LOG",
  "PERF",
  "PIE",
  "RUF",
  "S",
  "UP",
  "W",
]
lint.per-file-ignores."tests/*" = [
  "S101",
]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.uv]
prerelease = "allow"
preview = true
required-version = ">=0.6"
