[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-pinned-extra>=0.0.1,<0.1",
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-pypistats"
description = "Singer tap for pypistats.org"
readme = "README.md"
keywords = [
  "meltano",
  "pypistats",
  "singer-io",
  "singer-tap",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
]
dynamic = [
  "optional-dependencies",
  "version",
]
dependencies = [
  "requests~=2.32",
  "requests-cache~=1.2",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-pypistats#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-pypistats"
scripts."tap-pypistats" = "tap_pypistats.tap:main"

[dependency-groups]
dev = [
  { include-group = "tests" },
]
tests = [
  "pytest>=8.4",
  "pytest-httpserver>=1.1",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.pinned_extra]
name = "pinned"

[tool.uv]
prerelease = "allow"
preview = true
required-version = ">=0.6"

[tool.ruff]
line-length = 100
preview = true

lint.select = [
  "BLE",
  "C90",
  "E",
  "F",
  "FA",
  "FURB",
  "G",
  "I",
  "LOG",
  "PERF",
  "PIE",
  "RUF",
  "S",
  "UP",
  "W",
]
lint.per-file-ignores."tests/*" = [
  "S101",
]

[tool.pyproject-fmt]
max_supported_python = "3.15"

[tool.tox]
requires = [ "tox", "tox-uv" ]
env_list = [
  "3.15",
  "3.14",
  "3.13",
  "3.12",
  "3.11",
  "3.10",
]

[tool.tox.env_run_base]
description = "run unit tests"
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_PYPISTATS_*" ]
dependency_groups = [ "tests" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
